# owt-sdk-quic

./: DEPS  README.md  build-gn.patch  quic_raw_dispatcher.cc  quic_raw_dispatcher.h  quic_raw_server_session.cc  quic_raw_server_session.h
.github/workflows/: ci.yaml
example/: Makefile
quic_io/: build-gn.patch
quic_io/src/: quic_raw_client.cc  quic_raw_client.h  quic_raw_client_base.cc  quic_raw_client_base.h  quic_raw_client_session.cc  (+9 more)
quic_transport/: BUILD.gn
quic_transport/api/owt/quic/: export.h  ice_transport_interface.h  p2p_quic_packet_transport_interface.h  p2p_quic_stream.h  p2p_quic_stream_interface.h  p2p_quic_transport.h  p2p_quic_transport_interface.h  quic_definitions.h  quic_transport_client_interface.h  quic_transport_factory.h  quic_transport_server_interface.h  quic_transport_session_interface.h  quic_transport_stream_interface.h  version.h
quic_transport/docker/: Dockerfile
quic_transport/docs/: build_instructions.md  third_party_licenses.txt
quic_transport/impl/: dllmain.cc  dllmain_unittest.cc  p2p_quic_stream_impl.cc  p2p_quic_stream_impl.h  p2p_quic_transport_impl.cc  p2p_quic_transport_impl.h  proof_source_owt.h  quic_definitions.cc  quic_packet_transport_ice_adapter.cc  quic_packet_transport_ice_adapter.h  quic_transport_factory.cc  quic_transport_factory_impl.cc  quic_transport_factory_impl.h  quic_transport_factory_impl_unittest.cc  quic_transport_owt_client_impl.cc  quic_transport_owt_client_impl.h  quic_transport_owt_end_to_end_test.cc  quic_transport_owt_server_dispatcher.cc  quic_transport_owt_server_dispatcher.h  quic_transport_owt_server_impl.cc  quic_transport_owt_server_impl.h  quic_transport_owt_server_session.cc  quic_transport_owt_server_session.h  quic_transport_server_impl.cc  quic_transport_server_impl.h  quic_transport_stream_impl.cc  quic_transport_stream_impl.h  version_info_values.h.template
quic_transport/impl/tests/: quic_transport_owt_end_to_end_test.cc  run_all_unittests.cc
quic_transport/patches/: 0001-Add-owt_quic_transport-to-BUILD.gn.patch
quic_transport/resources/: owt_version.rc.version
quic_transport/sdk/api/owt/quic/: quic_transport_client_interface.h  quic_transport_factory.h  quic_transport_server_interface.h  quic_transport_session_interface.h  quic_transport_stream_interface.h  version.h
quic_transport/sdk/impl/: logging.cc  proof_source_owt.cc  proof_source_owt.h  proof_verifier_owt.cc  proof_verifier_owt.h  quic_transport_factory_impl.cc  quic_transport_factory_impl.h  quic_transport_owt_client_base.cc  quic_transport_owt_client_base.h  quic_transport_owt_client_impl.cc  quic_transport_owt_client_impl.h  quic_transport_owt_client_session.cc  quic_transport_owt_client_session.h  quic_transport_owt_dispatcher.cc  quic_transport_owt_dispatcher.h  quic_transport_owt_server_impl.cc  quic_transport_owt_server_impl.h  quic_transport_owt_server_session.cc  quic_transport_owt_server_session.h  quic_transport_owt_stream_impl.cc  quic_transport_owt_stream_impl.h
web_transport/: BUILD.gn  VER
web_transport/api/owt/quic/: quic_transport_session_interface.h  version.h
web_transport/data/ssl/certificates/: leaf_cert.pfx
web_transport/docker/: Dockerfile
web_transport/docs/: build_instructions.md  threading_model.md
web_transport/impl/: proof_source_owt.cc  proof_source_owt_unittest.cc  quic_transport_factory_impl.cc  quic_transport_factory_impl_unittest.cc  quic_transport_owt_client_impl.h  quic_transport_owt_server_dispatcher.cc  quic_transport_owt_server_dispatcher.h  quic_transport_owt_server_impl.h  quic_transport_owt_server_session.cc  quic_transport_owt_server_session.h  quic_transport_stream_impl.cc  quic_transport_stream_impl.h  version.cc  version_unittest.cc
web_transport/impl/tests/: quic_transport_owt_end_to_end_test.cc
web_transport/patches/: 0001-Add-owt_web_transport-to-BUILD.gn.patch  0002-Allow-connections-from-HTTP-3-datagram-draft-04-endp.patch  0002-build-Relanding-Rudimentary-support-for-Visual-Studi.patch  0003-Update-generate-certs.sh-to-use-ECDSA.patch  0004-Roll-clang-llvmorg-14-init-8564-g34b903d8-2-llvmorg-.patch  0005-Fix-compiling-issues-after-upgrading-clang-to-15.patch
web_transport/sdk/: VER
web_transport/sdk/api/owt/quic/: export.h  logging.h  quic_transport_client_interface.h  quic_transport_factory.h  version.h  web_transport_client_interface.h  web_transport_definitions.h  web_transport_factory.h  web_transport_server_interface.h  web_transport_session_interface.h  web_transport_stream_interface.h
web_transport/sdk/impl/: dllmain_unittest.cc  http3_server_session.cc  http3_server_session.h  http3_server_stream.cc  http3_server_stream.h  logging.cc  proof_source_owt.cc  proof_source_owt.h  proof_source_owt_unittest.cc  quic_transport_factory_impl.cc  quic_transport_factory_impl.h  quic_transport_factory_impl_unittest.cc  quic_transport_owt_client_impl.cc  quic_transport_owt_client_impl.h  quic_transport_owt_server_dispatcher.h  quic_transport_owt_server_impl.cc  quic_transport_owt_server_impl.h  quic_transport_owt_server_session.cc  quic_transport_owt_server_session.h  quic_transport_stream_impl.cc  quic_transport_stream_impl.h  utilities.cc  utilities.h  version.cc  version_info_values.h.template  web_transport_factory_impl.cc  web_transport_factory_impl.h  web_transport_factory_impl_unittest.cc  web_transport_http3_client.cc  web_transport_http3_client.h  web_transport_owt_client_impl.cc  web_transport_owt_client_impl.h  web_transport_owt_server_dispatcher.cc  web_transport_owt_server_dispatcher.h  web_transport_owt_server_impl.cc  web_transport_owt_server_impl.h  web_transport_server_backend.cc  web_transport_server_backend.h  web_transport_server_session.cc  web_transport_server_session.h  (+4 more)
web_transport/sdk/impl/tests/: quic_transport_owt_end_to_end_test.cc  web_transport_echo_visitors.cc  web_transport_echo_visitors.h  web_transport_owt_end_to_end_test.cc  web_transport_test_client.cc  web_transport_test_server.cc
web_transport/sdk/resources/ssl/certificates/: proof_source_pkcs12_test.pfx
wrapper/: quic_raw_lib.cc  quic_raw_lib.h
(+8 files in other folders)
