# Copyright (C) <2020> Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0

import("//testing/test.gni")

source_set("owt_quic_transport_impl") {
  deps = [
    "//base",
    "//net",
    "//net:simple_quic_tools",
    "//net/third_party/quiche:simple_quic_tools_core",
    "//third_party/boringssl",
  ]
  sources = [
    "api/owt/quic/quic_definitions.h",
    "api/owt/quic/quic_transport_client_interface.h",
    "api/owt/quic/quic_transport_factory.h",
    "api/owt/quic/quic_transport_server_interface.h",
    "impl/quic_transport_factory_impl.cc",
    "impl/quic_transport_factory_impl.h",
    "impl/quic_transport_owt_client_impl.cc",
    "impl/quic_transport_owt_client_impl.h",
    "impl/quic_transport_owt_server_dispatcher.cc",
    "impl/quic_transport_owt_server_dispatcher.h",
    "impl/quic_transport_owt_server_impl.cc",
    "impl/quic_transport_owt_server_impl.h",
    "impl/quic_transport_owt_server_session.cc",
    "impl/quic_transport_owt_server_session.h",
    "impl/quic_transport_stream_impl.cc",
    "impl/quic_transport_stream_impl.h",
  ]
  include_dirs = [
    "./",
    "api",
  ]

  defines = [ "OWT_QUIC_LIBRARY_IMPL" ]
}

shared_library("owt_quic_transport") {
  deps = [ ":owt_quic_transport_impl" ]
}

test("owt_quic_transport_tests") {
  testonly = true
  sources = [
    "//net/test/run_all_unittests.cc",
    "impl/tests/quic_transport_owt_end_to_end_test.cc",
  ]
  configs += [ "//build/config:precompiled_headers" ]
  deps = [
    ":owt_quic_transport_impl",
    "//net:quic_test_tools",
    "//net:test_support",
    "//testing/gmock",
    "//testing/gtest",
  ]
  include_dirs = [ "api" ]
  defines = [ "OWT_QUIC_LIBRARY_IMPL" ]
}
